네비게이션과 본문에 대하여 설명

--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -31,5 +31,16 @@
 - [웹표준가이드1](http://open-stand.org/)
 - [웹표준가이드2](http://docs.webplatform.org/wiki/Main_Page)
 
+#첫째날 3번쨰 시간#
+- heading tag
+- ul 태그와 > #li >  네이게이션
+- 본문
+	- div 태그 > 나중에 CSS하기 위해 필요함.
+	- 코딩을 해 봅시다.
+	
+
+
+
+
 
 
