--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -42,7 +42,11 @@
 - css와 html이 분리된 것이 SEO적이다.
 
 #젠코딩 설명
-http://opentutorials.org/course/128/1395
+- http://opentutorials.org/course/128/1395
+
+#php언어에 대하여 언급
+- 웹페이지에 대한 공수가 문제
+
 
 
 
