부트스트랩 이야기

--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -55,6 +55,11 @@
 
  #5교시
  -class 선택자 설명
+
+ #7교시
+ - 자바스크립트의 기본
+ - [부트스트랩](http://twitter.github.com/bootstrap/) 반응형 웹디자인 프레임워크
+ - 여러가지 컴포넌트를 제공한다.
     
 
 
