웹서비스의 전체적인 개요에 대하여 이야기

--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -65,9 +65,13 @@
 
 
 
-#생활코딩 2번째 시작
+#생활코딩 2일째 시작
 - [부트 스트랩](http://github.com) 사이트 소개
 - 부트스크랩에 대한 설명 Scaffoling (건축 용어) 트워터 부트 스르트랩의 골격같은 것
 
+#생활코딩 2일째 - 2교시
+- 클라인언트(고객(을)) <--(요청(리퀘스트(request)) & 응답(리스판스(response)))--> 서버(제공자(을))
 
+- 서버사이드 기술에 대한 설명
+- 아파츠 웹서버라는 것
 
