렉쳐 강의 수정

--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -2,32 +2,25 @@
 
 - 기획자, 디자인, 프로그래머
 
-* 협업하여 프로젝트 진행
+- 협업하여 프로젝트 진행
 
-*'내가 만든' 온전한 생산
+- '내가 만든' 온전한 생산
 
-*[생활 코딩 개론](http://egoing.net/1311)
+- [생활 코딩 개론](http://egoing.net/1311)
 
-*정렬순서의 문제
+- 정렬순서의 문제
 
-*UI 모델링
+#UI 모델링
 - 건축
-
-*래리웰, 노암촘스키
-
-#개발에 대해
+- 래리웰, 노암촘스키
+- 개발에 대해
 
 #HTML
 - 페이지랭킹
-
 - 메타데이트/ 데이타
-
 - HTML과 HTML5의 차이
-
 - [웹표준기관](http://www.w3c.org)
-
 - [웹표준스펙](http://www.w3.org/TR)
-
 - [웹표준가이드1](http://open-stand.org/)
 - [웹표준가이드2](http://docs.webplatform.org/wiki/Main_Page)
 
@@ -38,23 +31,23 @@
 	- div 태그 > 나중에 CSS하기 위해 필요함.
 	- 코딩을 해 봅시다.
 
-#코드의 설명
+# 코드의 설명
 - css와 html이 분리된 것이 SEO적이다.
 
-#젠코딩 설명
+# 젠코딩 설명
 - http://opentutorials.org/course/128/1395
 
-#php언어에 대하여 언급
+## php언어에 대하여 언급
 - 웹페이지에 대한 공수가 문제
-
-#CSS
+- CSS
 
 #4교시
-토픽 topic1.html
-    topic2.html 추가함
+- 토픽 
+  - topic1.html
+  - topic2.html 추가함
 
  #5교시
- -class 선택자 설명
+ - class 선택자 설명
 
  #7교시
  - 자바스크립트의 기본
@@ -85,5 +78,5 @@
 - S3
 	- 단일 파일을 5TB까지 기록할수 있고
 	- 물리적으로 3개의 백업본을 만듬.
-	
+
 
