아마존 웹 서비스에 대하여 소개

--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -79,4 +79,11 @@
 	- 단일 파일을 5TB까지 기록할수 있고
 	- 물리적으로 3개의 백업본을 만듬.
 
+- [아마존 웹서비스 인프라](http://aws.amazon.com)
+- 아마존 서비스 대해 소개
+    - CloudSearch(검색엔진)
+    - Elastic Transcoder(빅데이트 이슈에 설명)
+    - Glacier(데이타를 안전하고 저렴하게 쓰일때)
+    - CloudFront(CDN컨텐츠 딜리버리 네트워크)
+    
 
