서비스 보안에 대하여 이야기

--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -85,5 +85,9 @@
     - Elastic Transcoder(빅데이트 이슈에 설명)
     - Glacier(데이타를 안전하고 저렴하게 쓰일때)
     - CloudFront(CDN컨텐츠 딜리버리 네트워크)
-    
+
+ #생활코딩 4일찌 - 4교시 서비스에 대하여 이갸기
+- > rm -rf
+- 서비스를 운영한다는 건 책임감과 보안에 대하여 생각한다. 좋은 습관은 여러분의 보안을 책임질 수 있다.
+ 
 
