아마존 접속 실습

--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -89,5 +89,18 @@
  #생활코딩 4일찌 - 4교시 서비스에 대하여 이갸기
 - > rm -rf
 - 서비스를 운영한다는 건 책임감과 보안에 대하여 생각한다. 좋은 습관은 여러분의 보안을 책임질 수 있다.
- 
+
+- 아마존 웹 서비스 인스턴스 생성
+- 아마존은 가용성 존 (가동율-다운타임(1시간 법적인 제약이 있음))
+
+- 아마존 서버 접속
+	- 자바 런타임/JVM에 대한 설명(flashplayer설명) 
+	- PHP, 
+
+	 - 접속 :
+	 	- 접속하기전에 파일 허가권을 줌 다음에 작업
+	 	- ssh -i zacsim3_duru.pem ubuntu@ec2-54-248-207-140.ap-northeast-1.compute.amazonaws.com
+     - 자바 JVM 떄문에 고생
+
+
 
