--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -72,7 +72,7 @@
 - 서버머신을 마련해야 함
 	- IP / IDC에 대하여 설멍
 
-#생활코딩 3일찌 - 3교시
+#생활코딩 2일째 - 3교시
 - 아마존 서비스에 대하여 설명
 - 엘라스틱
 - S3
@@ -86,8 +86,8 @@
     - Glacier(데이타를 안전하고 저렴하게 쓰일때)
     - CloudFront(CDN컨텐츠 딜리버리 네트워크)
 
- #생활코딩 4일찌 - 4교시 서비스에 대하여 이갸기
-- > rm -rf
+#생활코딩 2일쨰 - 4교시 서비스에 대하여 이야기
+- > rm -rf(위험한 명령어)
 - 서비스를 운영한다는 건 책임감과 보안에 대하여 생각한다. 좋은 습관은 여러분의 보안을 책임질 수 있다.
 
 - 아마존 웹 서비스 인스턴스 생성
@@ -101,6 +101,12 @@
 	 	- 접속하기전에 파일 허가권을 줌 다음에 작업
 	 	- ssh -i zacsim3_duru.pem ubuntu@ec2-54-248-207-140.ap-northeast-1.compute.amazonaws.com
      - 자바 JVM 떄문에 고생
+
+#생활코딩 2일쨰 - 5교시 서버에서 활동(서버설치)
+- 커맨드라인에 장점 (논리적인 처리가 가능하다) --> 느낌을 잡아야. 중요한 기술이다.
+- 유닉스 계열 & 원도우 계열 운영체제
+
+
 
 
 
