아파치 서버 구축

--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -106,7 +106,10 @@
 - 커맨드라인에 장점 (논리적인 처리가 가능하다) --> 느낌을 잡아야. 중요한 기술이다.
 - 유닉스 계열 & 원도우 계열 운영체제
 
+- 서버 설치 : [서버 구축](http://opentutorials.org/course/488/2602)
+- 패키지 관리자 업데이트 apt-get update
+- 아파치2 설치한다. apt-get install apahce2
 
-
-
+##방화벽의 설명
+- 
 
