방화벽 80해제 웹서비스 실습 확인

--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -110,6 +110,13 @@
 - 패키지 관리자 업데이트 apt-get update
 - 아파치2 설치한다. apt-get install apahce2
 
-##방화벽의 설명
-- 
+##방화벽 (보안) 이야기
+- http, ssh, ftp, https, ftp
+- 방화벽이 있고 각각의 허용된 포트가 있다. 
+
+##아마존에서 방확벽 http오픈
+- 실습
+
+
+
 
