강좌 기록 문서 정렬

--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -1,21 +1,19 @@
-#기획#
+# 생활코딩 1일째 시작
+- 요이땅
 
+## 기획
 - 기획자, 디자인, 프로그래머
-
 - 협업하여 프로젝트 진행
-
 - '내가 만든' 온전한 생산
-
 - [생활 코딩 개론](http://egoing.net/1311)
-
 - 정렬순서의 문제
 
-#UI 모델링
+## UI 모델링
 - 건축
 - 래리웰, 노암촘스키
 - 개발에 대해
 
-#HTML
+## HTML
 - 페이지랭킹
 - 메타데이트/ 데이타
 - HTML과 HTML5의 차이
@@ -24,38 +22,36 @@
 - [웹표준가이드1](http://open-stand.org/)
 - [웹표준가이드2](http://docs.webplatform.org/wiki/Main_Page)
 
-#첫째날 3번쨰 시간#
+# 생활코딩 1일째 - 3교시
 - heading tag
 - ul 태그와 > #li >  네이게이션
 - 본문
 	- div 태그 > 나중에 CSS하기 위해 필요함.
 	- 코딩을 해 봅시다.
 
-# 코드의 설명
+## 코드의 설명
 - css와 html이 분리된 것이 SEO적이다.
 
-# 젠코딩 설명
+## 젠코딩 설명
 - http://opentutorials.org/course/128/1395
 
 ## php언어에 대하여 언급
 - 웹페이지에 대한 공수가 문제
 - CSS
 
-#4교시
+# 생활코딩 1일째 - 4교시
 - 토픽 
   - topic1.html
   - topic2.html 추가함
 
- #5교시
+ # 생활코딩 1일째 - 5교시
  - class 선택자 설명
 
- #7교시
+ # 생활코딩 1일째 - 7교시
  - 자바스크립트의 기본
  - [부트스트랩](http://twitter.github.com/bootstrap/) 반응형 웹디자인 프레임워크
  - 여러가지 컴포넌트를 제공한다.
     
-
-
 
 
 #생활코딩 2일째 시작
@@ -116,6 +112,14 @@
 
 ##아마존에서 방확벽 http오픈
 - 실습
+
+
+#생활코딩 2일쨰 - 6교시 (서버설치)
+- 서브라임테스트에서 package control install > sftp
+- 서브라임테스트 설정 방법
+- windows 운영체제에서 > pem키 생성 > setting 설정
+	- 설정의 과정은 힘든다.--> 사람들이 참 힘들어 한다.
+
 
 
 
