--- a/생활코딩_오프라인_강의.md
+++ b/생활코딩_오프라인_강의.md
@@ -126,6 +126,14 @@
 ![작심3일 모바일 결과문](complete_mobile.PNG "공동공부")
 
 
+# 생활코딩 2일쨰 - 마무리
+- 마무리 종합적 서버단 기술에 대하여 이야기
+- Q&A
+- 다음번 후속 강의 :) 오늘 못한 내용은 조만간 다시 -> 이메일 설문
+
+
+
+
 
 
 
